test/errhandling/stacktrace/propagateThroughIterator2.2-0.good
caught error: oops
stack trace:
  (frame 1) propagateThroughIterator2.chpl:20
  (frame 2) propagateThroughIterator2.chpl:14
  (frame 3) propagateThroughIterator2.chpl:14
  (frame 4) propagateThroughIterator2.chpl:2
uncaught Error: oops
  propagateThroughIterator2.chpl:30: uncaught here
  propagateThroughIterator2.chpl:30: called from here
  propagateThroughIterator2.chpl:14: called from here
  propagateThroughIterator2.chpl:14: called from here
  propagateThroughIterator2.chpl:2: thrown here
